dctrl2xml (0.10) unstable; urgency=low

  * doc/dctrl2xml.xml:
    - Fixed Lintian's "I: hyphen-used-as-minus-sign" by enclosing the command
      examples with the <userinput> element.
    - Updated from DocBook 4.2 to 4.4, which is the latest version in etch.
    - Enhanced the command synopsis.
  * Updated the debhelper compatibility level from V5 to V6 since this is the
    current recommended level and raised the build dependency to "debhelper
    (>= 6)".

 -- Frank S. Thomas <fst@debian.org>  Sat, 12 Jan 2008 15:36:13 +0100

dctrl2xml (0.9) unstable; urgency=low

  * dctrl2xml:
    - Do not fail on truncated tags where the "::" separator is missing.
    - Improved contacts parsing to handle strings such as "john@example.org
      (John R. Doe)".
    - Instead of replacing only "3" with "_3" in tags, prefix all tags that
      begin with a decimal digit with an underscore.
    - Added the "generator" attribute, whose value is "dctrl2xml/$VERSION", to
      the topmost element of dctrl2xml's XML output.
    - Parse also the file list of the Conffiles field.
    - Print error messages to standard error if the format of field data of
      several fields could not be recognized.
    - Do not fail if 'UTC' is used as time zone designator (as it is done in
      Release files), although RFC 2822 does not seem to permit this.
    - Do not discard the last (or the only) control entry if data input does
      not end with an empty line.
  * debian/rules: Added test target that stress tests dctrl2xml with the dpkg
    available file and the output of "apt-cache dumpavail".
  * debian/control: Moved python-support from Build-Depends to
    Build-Depends-Indep, because it is not required for the clean target.

 -- Frank S. Thomas <fst@debian.org>  Wed, 02 Jan 2008 10:11:11 +0100

dctrl2xml (0.8) unstable; urgency=low

  * dctrl2xml:
    - Print dctrl2xml's version number if the --version option is given.