@@ -4,12 +4,13 @@ dctrl2xml (0.10) unstable; urgency=low
     - Fixed Lintian's "I: hyphen-used-as-minus-sign" by enclosing the command
       examples with the <userinput> element.
     - Updated from DocBook 4.2 to 4.4, which is the latest version in etch.
-    - Enhanced the command synopsis.
+    - Enhanced the command synopsis and added to the description of the --file
+      option that dctrl2xml can read plain text, gzip, bzip2 or ZIP files.
   * Updated the debhelper compatibility level from V5 to V6 since this is the
     current recommended level and raised the build dependency to "debhelper
     (>= 6)".
 
- -- Frank S. Thomas <fst@debian.org>  Sat, 12 Jan 2008 15:36:13 +0100
+ -- Frank S. Thomas <fst@debian.org>  Tue, 22 Jan 2008 11:54:32 +0100
 
 dctrl2xml (0.9) unstable; urgency=low
 
